
=item *

HDR/XHDR/XPAT answers are now robust when the overview database is
inconsistent.  When the overview schema was modified without the overview
database being rebuilt, wrong results could be returned for extra fields
(especially a random portion of some other header).  The desired header
name is now explicitly searched in the overview information.

=item *

A new B<-L> flag has been added by Jonathan Kamens to B<makehistory>
so as to specify a load average limit.  If the system load average exceeds
the specified limit, B<makehistory> sleeps until it goes below the limit.

=item *

The output of consistency checks for article storage and the F<history>
file no longer appears by default when C<cnfsstat -a> is used.  A new B<-v>
flag has been added to B<cnfsstat> so as to see it.

=item *

The default path for TLS certificates has changed from I<pathnews>/lib
to I<pathetc>.  It only affects new INN installations or generations of
certificates with C<make cert>.  Besides, a default value has been
added to I<tlscapath> because it is required by B<nnrpd> when TLS
is used.

=item *

gzip(1) is now the default UUCP batcher in B<send-uucp>, instead of
compress(1) whose algorithm has patent issues.

=item *

B<cnfsheadconf> now uses the Perl core module C<Math::BigInt> rather
than the deprecated F<bigint.pl> library.  When used without specifying
a CNFS buffer, it properly displays the status of all CNFS buffers.

=back

=head1 Upgrading from 2.4 to 2.5

The following changes require your full attention because a manual intervention
may be needed:

=over 2

=item *

In order to process control messages, B<controlchan> now needs the
C<MIME::Parser> module.  Packages are available from most distributions,
or you can install the module directly from CPAN (C<MIME-tools> in
F<modules/by-module/MIME/>, for instance on ftp.perl.org).

S<Perl 5.8.0> or later is recommended for INN.  If you are using an earlier